--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1703,15 +1703,19 @@ paths:
           in: query
           schema:
             type: boolean
+          description: Whether to include the credentials in the response. If true, only access token will be included. default is false.
         - name: includeRefreshToken
           in: query
           schema:
             type: boolean
+          description: Whether to include the refresh token in credentials in the response along with access token. If true, parameter `includeCreds` will be ignored and include both access token and refresh token. If this parameter is true for connections other than `OAuth2 Authorization Code`, it will be ignored. default is false.
         - name: refresh
           in: query
           schema:
             type: string
             enum: [force, ifExpired]
+          description:
+            Whether to force refresh the access token. If `force`, the access token will be refreshed regardless of its expiration. If `ifExpired`, the access token will be refreshed only if it has expired.
       responses:
         200:
           description: Connection
