--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1616,47 +1616,7 @@ paths:
                         type: string
                       description: The scopes for the tokens.
                 oauth2AuthorizationCode:
-                  type: object
-                  properties:
-                    accessToken:
-                      type: object
-                      required:
-                        - token
-                      properties:
-                        token:
-                          type: string
-                          description: The access token to use for the connection.
-                        expiresAt:
-                          type: string
-                          format: date-time
-                          description: The expiration date of the access token.
-                        issuedAt:
-                          type: string
-                          format: date-time
-                          description: The date the access token was issued.
-                      description: access token for the connection.
-                    refreshToken:
-                      type: object
-                      required: 
-                        - token
-                      properties:
-                        token:
-                          type: string
-                          description: The refresh token to use for the connection.
-                        issuedAt:
-                          type: string
-                          format: date-time
-                          description: The date the refresh token was issued.
-                        expiresAt:
-                          type: string
-                          format: date-time
-                          description: The expiration date of the refresh token.
-                      description: The refresh token to use for the connection.
-                    scopes:
-                      type: array
-                      items:
-                        type: string
-                      description: The scopes for the tokens.
+                  $ref: "#/components/schemas/Oauth2AuthorizationCode"
       responses:
         201:
           description: Created
@@ -1699,6 +1659,23 @@ paths:
           required: true
           schema:
             type: string
+        - name: includeCreds
+          in: query
+          schema:
+            type: boolean
+          description: Whether to include the credentials in the response. If true, only access token will be included. default is false.
+        - name: includeRefreshToken
+          in: query
+          schema:
+            type: boolean
+          description: Whether to include the refresh token in credentials in the response along with access token. If true, parameter `includeCreds` will be ignored and include both access token and refresh token. If this parameter is true for connections other than `OAuth2 Authorization Code`, it will be ignored. default is false.
+        - name: refresh
+          in: query
+          schema:
+            type: string
+            enum: [force, ifExpired]
+          description:
+            Whether to force refresh the access token. If `force`, the access token will be refreshed regardless of its expiration. If `ifExpired`, the access token will be refreshed only if it has expired.
       responses:
         200:
           description: Connection
@@ -2835,6 +2812,53 @@ components:
           description: The time the connection was last updated.
           format: date-time
           example: 2023-07-13T21:34:44.816354Z
+        authScheme:
+          type: string
+          description: The authentication scheme used for this connection.
+          example: oauth2/authorizationCode
+          enum:
+            [
+              none,
+              apiKey,
+              basic,
+              oauth2/authorizationCode,
+              oauth2/authorizationCodePKCE,
+              oauth2/clientCredentials,
+              oauth2/password,
+            ]
+        status:
+          type: string
+          description: The status of the connection.
+          example: created
+          enum: [created, working, bad_credentials]
+        oauth2AuthorizationCode:
+          $ref: "#/components/schemas/Oauth2AuthorizationCode"
+    Oauth2AuthorizationCode:
+      type: object
+      properties:
+        accessToken:
+          type: object
+          required:
+            - token
+          description: access token for the connection.
+          properties:
+            token:
+              type: string
+              description: The access token to use for the connection.
+        refreshToken:
+          type: object
+          required:
+            - token
+          description: The refresh token to use for the connection.
+          properties:
+            token:
+              type: string
+              description: The refresh token to use for the connection.
+        scopes:
+          type: array
+          items:
+            type: string
+          description: The scopes for the tokens.
     ImportConnectionRequest:
       required:
         - groupRef
