--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1521,7 +1521,7 @@ paths:
   /projects/{projectIdOrName}/connections:generate:
     post:
       summary: Generate a new connection
-      description: This endpoint is only valid for providers with auth types which are not OAuth2 Authorization Code.
+      description: For providers which support OAuth2 Authorization Code, it is recommended that you use the [/oauth-connect endpoint](https://docs.withampersand.com/reference/oauth/get-url-for-oauth-flow) instead, unless you already have the refresh token and are importing it into Ampersand.
       operationId: generateConnection
       tags: ["Connection"]
       parameters:
@@ -1663,19 +1663,19 @@ paths:
           in: query
           schema:
             type: boolean
-          description: Whether to include the credentials in the response. If true, only access token will be included. default is false.
+          description: Whether to include the credentials in the response. Only access token will be included. Default is false.
         - name: includeRefreshToken
           in: query
           schema:
             type: boolean
-          description: Whether to include the refresh token in credentials in the response along with access token. If true, parameter `includeCreds` will be ignored and include both access token and refresh token. If this parameter is true for connections other than `OAuth2 Authorization Code`, it will be ignored. default is false.
+          description: Whether to include the refresh token in credentials in the response along with access token. If true, the `includeCreds` query parameter will be ignored. Default is false.
         - name: refresh
           in: query
           schema:
             type: string
             enum: [force, ifExpired]
           description:
-            Whether to force refresh the access token. If `force`, the access token will be refreshed regardless of its expiration. If `ifExpired`, the access token will be refreshed only if it has expired.
+            Whether to refresh the access token. If value is `ifExpired`, the access token will be refreshed only if it has expired. If value is `force`, the access token will be refreshed regardless of its expiration. 
       responses:
         200:
           description: Connection
@@ -2775,7 +2775,6 @@ components:
         - id
         - projectId
         - providerApp
-        - providerWorkspaceRef
       type: object
       properties:
         id:
@@ -2794,12 +2793,12 @@ components:
           $ref: "#/components/schemas/Consumer"
         providerWorkspaceRef:
           type: string
-          description: The identifier for the provider workspace (e.g. "salesforce-instance-domain")
+          description: If available, the identifier for the provider workspace (e.g. "salesforce-instance-domain")
           example: provider-workspace-123
-        ProviderConsumerRef:
+        providerConsumerRef:
           type: string
           description:
-            The ID that Salesforce/Hubspot uses to identify this user (e.g.
+            If available, the ID that Salesforce/Hubspot uses to identify this user (e.g.
             Salesforce has IDs in the form of https://login.salesforce.com/id/00D4x0000019CQTEA2/0054x000000orJ4AA)
           example: provider-consumer-123
         createTime:
@@ -2829,22 +2828,21 @@ components:
         status:
           type: string
           description: The status of the connection.
-          example: created
+          example: working
           enum: [created, working, bad_credentials]
         oauth2AuthorizationCode:
-          $ref: "#/components/schemas/Oauth2AuthorizationCode"
-    Oauth2AuthorizationCode:
+          $ref: "#/components/schemas/Oauth2AuthorizationCodeTokensOnly"
+    Oauth2AuthorizationCodeTokensOnly:
       type: object
       properties:
         accessToken:
           type: object
           required:
             - token
-          description: access token for the connection.
+          description: The access token for the connection.
           properties:
             token:
               type: string
-              description: The access token to use for the connection.
         refreshToken:
           type: object
           required:
@@ -2853,7 +2851,42 @@ components:
           properties:
             token:
               type: string
-              description: The refresh token to use for the connection.
+        scopes:
+          type: array
+          items:
+            type: string
+          description: The scopes for the tokens.
+    Oauth2AuthorizationCode:
+      type: object
+      properties:
+        accessToken:
+          type: object
+          required:
+            - token
+          description: The access token for the connection.
+          properties:
+            token:
+              type: string
+            expiresAt:
+              type: string
+              format: date-time
+            issuedAt:
+              type: string
+              format: date-time
+        refreshToken:
+          type: object
+          required:
+            - token
+          description: The refresh token to use for the connection.
+          properties:
+            token:
+              type: string
+            expiresAt:
+              type: string
+              format: date-time
+            issuedAt:
+              type: string
+              format: date-time
         scopes:
           type: array
           items:
