[ENG-1743] feat: rename `since` to `sinceTimestamp` (#87)
* [ENG-1743] feat: rename `since` to `sinceTimestamp`

* remove `since` field altogether

--- a/api/read.yaml
+++ b/api/read.yaml
@@ -127,7 +127,7 @@ components:
           description: The mode of read operation. Currently only asynchronus operation is supported.
           enum: [async]
           example: async
-        since:
+        sinceTimestamp:
           type: string
           description: The timestamp from which to read data. If omitted, we will read all data.
           example: "2024-07-01T18:22:30.323771761Z"
