--- a/api/read.yaml
+++ b/api/read.yaml
@@ -9,7 +9,7 @@ paths:
     post:
       summary: Trigger read
       description:
-        Triggers a read action. If sinceTimestamp is omitted, we will do a full historic sync otherwise we will sync from the sinceTimestamp.
+        Triggers a read action. If `sinceTimestamp` is omitted, we will do a full historic sync otherwise we will sync from `sinceTimestamp`.
       operationId: readRecords
       tags: ["Read"]
       parameters:
