--- a/api/read.yaml
+++ b/api/read.yaml
@@ -7,10 +7,10 @@ servers:
 paths:
   /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
     post:
-      summary: Trigger read
+      summary: Trigger a read
       description:
-        Triggers a read action. If `sinceTimestamp` is omitted, we will do a full historic sync otherwise we will sync from `sinceTimestamp`.
-      operationId: readRecords
+        Triggers reading data from a SaaS instance. See [Trigger a read](https://docs.withampersand.com/define-integrations/read-actions#trigger-a-read) for details.
+      operationId: triggerRead
       tags: ["Read"]
       parameters:
         - name: projectIdOrName
@@ -131,7 +131,7 @@ components:
           example: async
         sinceTimestamp:
           type: string
-          description: The timestamp from which to read data. If omitted, we will read all data.
+          description: The UTC timestamp from which to read data. If omitted, we will read all data.
           example: "2024-07-01T18:22:30.323771761Z"
     ReadResultAsync:
       type: object
