--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2710,6 +2710,7 @@ components:
         - projectId
         - provider
         - authScheme
+        - status
       type: object
       properties:
         id:
