feat: Add value defaults

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -123,6 +123,16 @@ components:
           type: boolean
           description: If true, the write object will inherit the mapping from the read object. If false, the write object will have no mapping.
           example: true
+        valueDefaults:
+          type: array
+          items:
+            $ref: '#/components/schemas/IntegrationWriteObjectValueDefault'
+
+    IntegrationWriteObjectValueDefault:
+      type: object
+      description: Consumers can specify default values for these fields.
+      required:
+          - fieldName
 
     HydratedIntegration:
       type: object
@@ -225,6 +235,10 @@ components:
           type: string
         displayName:
           type: string
+        valueDefaults:
+          type: array
+          items:
+            $ref: '#/components/schemas/IntegrationWriteObjectValueDefault'
 
     OptionalFieldsAutoOption:
       type: string
