--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -70,9 +70,11 @@ components:
         objectId:
           description: The ID of the associated object.
           type: string
+          x-go-type-skip-optional-pointer: true
         associationType:
           description: The type of the association.
           type: string
+          x-go-type-skip-optional-pointer: true
     ResultEntry:
       type: object
       description: Each ResultEntry corresponds with a record in the SaaS provider (e.g. a Salesforce Account).
